# data-visualization-python

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml  walkthrough.md
docs/: ecommerce_sales.csv  employee_survey.csv  implementation_plan.md  no_header_numeric.csv  semicolon_european.csv  stock_prices.csv  tab_delimited_data.tsv
docs/test-data/: missing_values.csv  weather_stations.csv
src/dataviz/: __init__.py  app.py  config.py  logger.py
src/dataviz/models/: __init__.py  schemas.py
src/dataviz/routers/: __init__.py  api.py  pages.py
src/dataviz/services/: __init__.py  chart_engine.py  data_parser.py  data_transformer.py
src/dataviz/static/css/: style.css
src/dataviz/static/js/: app.js  chart.js  controls.js  templates.js  uploader.js
src/dataviz/templates/: base.html  index.html
tests/: conftest.py  test_api.py  test_chart_engine.py  test_data_parser.py  test_data_transformer.py
